# execWRF

./: .gitignore  .hidden  LICENSE  Makefile  README.md  downloadFNL.py  download_fnl.py  exc_defs.py  exc_download.py  exc_namelist.py  exc_process.py  execWRF.py  execWRF.sh  exec_wrf.py  index.html  makeNamelist_DA.py  make_namelist_DA.py  monkeytype.sqlite3  pyproject.toml  requirements.txt
.github/workflows/: clsim-app.yml  main.yml
execWRF/: exc_defs.py  exc_download.py  exc_download.pyi  exc_namelist.py  exc_processes.py  exc_processes.pyi  exec_wrf.py  wrf_defs.py  x1
tests/: test_execWRF.py
