[tool.poetry]
name = "execWRF"
version = "0.2.0"
description = "execWRF"
authors = ["Milton Abrunhosa <ml_byteman@yahoo.com.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
graypy = "^2.1.0"
python-dotenv = "^0.20.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
isort = "^5.10.1"
black = "^22.3.0"
mypy = "^0.942"
MonkeyType = "^22.2.0"
types-requests = "^2.27.20"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
pylint = "^2.13.9"
pip-audit = "^2.2.1"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
